--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/bitpay/bitcore-lib.git"
+    "url": "https://github.com/wificoin-project/wificore-lib.git"
   },
   "browser": {
     "request": "browser-request"
