--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "bitcore-lib",
-  "main": "./bitcore-lib.min.js",
+  "name": "wificoin-lib",
+  "main": "./wificoin-lib.min.js",
   "version": "5.0.0-beta.1",
   "homepage": "http://bitcore.io",
   "authors": ["BitPay, Inc."],
